--- a/src/scss/_utiliteis.scss
+++ b/src/scss/_utiliteis.scss
@@ -3,6 +3,11 @@
   color: darkblue;
 }
 
+.table-title {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
 .input-label {
   text-transform: uppercase;
 }
@@ -38,4 +43,12 @@
 
 .mb-4 {
   margin-bottom: 4rem;
+}
+
+.opacity60 {
+  opacity: .6
+}
+
+.ml1 {
+  margin-left: 1rem;
 }
