--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -34,3 +34,4 @@
 @import "../components/equipment/card";
 @import "../components/statistics-bar/statistics-bar";
 @import "../components/map/map";
+@import "../components/forms/equipment-table-form";
